# scrumban

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  main.cpp
backend/: main.cc
backend/activity/: ActivityEvent.h
backend/config/: config.example.json  config.json
backend/controllers/: ActivityLogController.cc  ActivityLogController.h  AuthController.cc  AuthController.h  BoardColumnController.cc  BoardColumnController.h  CommentController.cc  CommentController.h  ProjectController.cc  ProjectController.h  SprintController.cc  SprintController.h  TaskController.cc  TaskController.h
backend/db/: schema.sql
backend/models/: ActivityLog.h  BoardColumn.h  Comment.h  Label.h  Project.h  Sprint.h  Task.h  User.h
backend/repositories/: ActivityLogRepository.cc  ActivityLogRepository.h  BoardColumnRepository.cc  BoardColumnRepository.h  CommentRepository.cc  CommentRepository.h  ProjectRepository.cc  ProjectRepository.h  SprintRepository.cc  SprintRepository.h  TaskRepository.cc  TaskRepository.h  UserRepository.cc  UserRepository.h
backend/services/: ActivityLogService.cc  ActivityLogService.h  AuthService.cc  AuthService.h  BoardColumnService.cc  BoardColumnService.h  CommentService.cc  CommentService.h  ProjectService.cc  ProjectService.h  SprintService.cc  SprintService.h  TaskService.cc  TaskService.h
backend/utils/: ApiResponse.h  JwtUtils.cc  JwtUtils.h  (+3 more)
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scripts/: build.ps1  dev.ps1
(+112 files in other folders)
